# remote

./: .gitignore  ARCHITECTURE.md  package.json  tsconfig.json  webpack.config.js
.claude/skills/evodev/: SKILL.md  examples.md  templates.md
ai-data-protocol/: package.json  tsconfig.json
ai-data-protocol/src/: index.ts
ai-data-protocol/src/adapters/: react-adapter.ts  vanilla-adapter.ts
ai-data-protocol/src/core/: adapter.ts  protocol.ts
ai-data-protocol/src/examples/: sales-data.ts  usage.ts
blockchain-exchange/: Cargo.toml
blockchain-exchange/src/: block.rs  exchange.rs  main.rs  order.rs  transaction.rs  wallet.rs
docs/fsd-architecture/: 01-overview.md  02-layers.md  03-slices-segments.md  04-public-api.md  05-nextjs-integration.md  06-examples.md  README.md
docs/react-testing/: 01-overview.md  02-setup.md  03-unit-testing.md  04-integration-testing.md  05-testing-patterns.md  06-enterprise-practices.md  README.md
enterprise-push-server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-stack.yml  prometheus.yml
enterprise-push-server/crates/auth/: Cargo.toml
enterprise-push-server/crates/auth/src/: handlers.rs  main.rs  oauth.rs  store.rs  tests.rs
enterprise-push-server/crates/common/: Cargo.toml
enterprise-push-server/crates/common/src/: auth.rs  bus.rs  config.rs  error.rs  lib.rs  tests.rs  types.rs
enterprise-push-server/crates/gateway-service/: Cargo.toml
enterprise-push-server/crates/gateway-service/src/: auth_client.rs  connection.rs  handler.rs  main.rs  tests.rs
enterprise-push-server/crates/message-service/: Cargo.toml
enterprise-push-server/crates/message-service/src/: main.rs  store.rs  tests.rs
enterprise-push-server/crates/presence-service/: Cargo.toml
enterprise-push-server/crates/presence-service/src/: main.rs  tests.rs
enterprise-push-server/crates/push-service/: Cargo.toml
enterprise-push-server/crates/push-service/src/: main.rs  tests.rs
enterprise-push-server/scripts/: build.sh  deploy.sh  push.sh  scale.sh
enterprise-push-server/src/: lib.rs  main.rs
enterprise-push-server/src/bus/: mod.rs
enterprise-push-server/src/config/: mod.rs
enterprise-push-server/src/gateway/: connection.rs  handler.rs  mod.rs
enterprise-push-server/src/message/: fanout.rs  mod.rs  router.rs
enterprise-push-server/src/presence/: mod.rs  tracker.rs
enterprise-push-server/src/push/: apns.rs  fcm.rs  mod.rs
enterprise-push-server/src/storage/: mod.rs  redis_store.rs  scylla_store.rs
kanban/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
kanban/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
kanban/.next/cache/: .tsbuildinfo  config.json
kanban/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
kanban/.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
kanban/.next/server/chunks/: 628.js  819.js
kanban/.next/server/pages/: 404.html  500.html
kanban/.next/static/chunks/: 266-4fd242b187893627.js  513-aa122088c3fce186.js  main-0f3752d81f9a60fa.js  webpack-42678a96e412cce6.js
kanban/app/: layout.tsx
kanban/docs/: TESTING_STRATEGY.md
kanban/e2e/: auth.spec.ts  board.spec.ts  drag-and-drop.spec.ts  filter.spec.ts  home.spec.ts
kanban/e2e/fixtures/: auth-setup.ts  kanban-seed.ts  test-fixtures.ts
kanban/pages/: README.md
kotlin-todo-server/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
oop-component-library/: package.json  tsconfig.json
oop-component-library/examples/counter/: index.html
oop-component-library/examples/todo-app/: index.html
oop-component-library/src/: index.ts
oop-component-library/src/components/: Button.ts  Card.ts  Input.ts  List.ts  Modal.ts  index.ts
oop-component-library/src/core/: Component.ts  EventEmitter.ts  Router.ts  State.ts  index.ts
oop-component-library/src/utils/: dom.ts  index.ts
public/: index.html
rust-gateway/: .env  .env.example  Cargo.toml
rust-gateway/src/: config.rs  error.rs  load_balancer.rs  main.rs  proxy.rs  router.rs
shopping-mall/: .env.example  .gitignore  README.md  docker-compose.yml  package.json
shopping-mall/app/: layout.tsx  page.module.css  page.tsx
shopping-mall/app/cart/: page.module.css  page.tsx
shopping-mall/app/categories/: page.module.css  page.tsx
shopping-mall/app/profile/: page.module.css  page.tsx
shopping-mall/app/search/: page.module.css  page.tsx
shopping-mall/app/wishlist/: page.module.css  page.tsx
shopping-mall/hasura/migrations/: init.sql
src/: App.tsx  index.js
src/components/: Button.tsx  Card.tsx
stock-trading-server/: .env.example  .gitignore  Cargo.toml  README.md
stock-trading-server/src/: main.rs
stock-trading-server/src/api/: auth_routes.rs  market_routes.rs  mod.rs  portfolio_routes.rs  trading_routes.rs
stock-trading-server/src/config/: mod.rs
stock-trading-server/src/db/: mod.rs  models.rs  repository.rs
stock-trading-server/src/error/: mod.rs
stock-trading-server/src/middleware/: auth.rs  mod.rs
stock-trading-server/src/services/: auth_service.rs  market_service.rs  mod.rs  portfolio_service.rs  trading_service.rs
stock-trading-server/src/websocket/: mod.rs
tanstack-todo/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
tanstack-todo/src/components/: AddTodo.tsx  TodoFilter.tsx  TodoItem.tsx  TodoList.tsx
tanstack-todo/src/routes/: __root.tsx  index.tsx
tanstack-todo/src/server/: todos.ts
type-safe-routing/: .gitignore  package-lock.json  package.json
type-safe-routing/app/: globals.css  layout.tsx  page.tsx
type-safe-routing/app/dashboard/: DashboardControls.tsx  page.tsx
type-safe-routing/app/products/: ProductSearchForm.tsx  page.tsx
type-safe-routing/app/search/: SearchForm.tsx  page.tsx
(+294 files in other folders)
