[package]
name = "blockchain-exchange"
version = "0.1.0"
edition = "2021"
description = "A simple blockchain-based cryptocurrency exchange"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
