[package]
name = "enterprise-push-server"
version = "0.1.0"
edition = "2021"
description = "Enterprise-grade push notification server with horizontal scaling support"
authors = ["Enterprise Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework with WebSocket support
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database clients
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
scylla = "0.12"

# Message bus
async-nats = "0.33"

# HTTP client for FCM/APNs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# JWT for authentication
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
