[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/auth",
    "crates/gateway-service",
    "crates/message-service",
    "crates/presence-service",
    "crates/push-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enterprise Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database clients
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
scylla = "0.12"

# Message bus
async-nats = "0.33"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# JWT/OAuth
jsonwebtoken = "9.2"
oauth2 = "4.4"
argon2 = "0.5"
rand = "0.8"

# Internal crates
common = { path = "crates/common" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
