[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"
description = "A lightweight API Gateway with load balancing"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
