[package]
name = "auth-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

redis = { workspace = true }
async-nats = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
