[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
