[package]
name = "message-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "message-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

redis = { workspace = true }
scylla = { workspace = true }
async-nats = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
